Fix padding issues on Safari, fit navbar on entire header and add on hover gray background

--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -16,7 +16,6 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 54px;
   }
   .site-logo-container {
     order: 1;
@@ -131,8 +130,6 @@
 }
 
 .hamburger-dropdown-container {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   width: 100%;
   padding-bottom: 4px;
@@ -150,7 +147,6 @@
     text-transform: uppercase;
     font-weight: 600;
     padding: 10px 0;
-    margin: 0 14px;
     text-decoration: none;
     color: $grey;
     letter-spacing: 1px;
@@ -158,14 +154,13 @@
     transition: all 0.5s ease;
     &.active {
       color: #6e7377;
-      border-bottom: solid 4px #a7e1ff;
       &:hover {
-        border-bottom: solid 4px #a7e1ff;
+        background-color: rgba(158,158,158,0.2);
       }
     }
     &:hover {
       color: #6e7377;
-      border-bottom: 4px solid #a7a7a7;
+      background-color: rgba(158,158,158,0.2);
     }
   }
 }
